--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <section>
+             <h1>
+                 <span class="flex">
+                        <span>AcmeWidgetCorp</span>
+                        <span>Balance Sheet</span>
+                 </span>
+             </h1>
+        </section>
+    </main>
 </body>
 </html>
