--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Balance Sheet</title>
 </head>
 <body>
     <main>
@@ -19,6 +19,15 @@
                 <span class="year">2019</span>
                 <span class="year">2020</span>
                 <span class="year">2021</span>
+             </div>
+             <div class="table-wrap">
+                <table>
+                    <caption>Assets</caption>
+                    <thead></thead>
+                    <tbody></tbody>
+                </table>
+                <table></table>
+                <table></table>
              </div>
         </section>
     </main>
