Add td and th elements to tbody

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                         </tr>
                     </thead>
                     <tbody>
-                        
+                        <tr class="data">
+                            <th>Cash <span>This is the cash we currently have on hand.</span></th>
+                        </tr>
                     </tbody>
                 </table>
                 <table></table>
