--- a/index.html
+++ b/index.html
@@ -33,8 +33,24 @@
                     </thead>
                     <tbody>
                         <tr class="data">
-                            <th>Cash <span>This is the cash we currently have on hand.</span></th>
+                            <th>Cash <span class="description">This is the cash we currently have on hand.</span></th>
+                            <td>$25</td>
+                            <td>$30</td>
+                            <td class="current">$28</td>
                         </tr>
+                        <tr class="data">
+                            <th>Checking <span class="description">Our primary transactional account.</span></th>
+                            <td>$54</td>
+                            <td>$56</td>
+                            <td class="current">$53</td>
+                        </tr>
+                        <tr class="data">
+                            <th>Savings <span class="description">Funds set aside for emergencies.</span></th>
+                            <td>$500</td>
+                            <td>$650</td>
+                            <td class="current">$728</td>
+                        </tr>
+                        <tr class="data"></tr>
                     </tbody>
                 </table>
                 <table></table>
