--- a/index.html
+++ b/index.html
@@ -50,10 +50,19 @@
                             <td>$650</td>
                             <td class="current">$728</td>
                         </tr>
-                        <tr class="data"></tr>
+                        <tr class="total">
+                            <th>Total <span class="sr-only">Assets</span></th>
+                            <td>$579</td>
+                            <td>$736</td>
+                            <td class="current">$809</td>
+                        </tr>
                     </tbody>
                 </table>
-                <table></table>
+                <table>
+                    <caption>Liabilities</caption>
+                    <thead></thead>
+                    <tbody></tbody>
+                </table>
                 <table></table>
              </div>
         </section>
