Add tr, td, and th to attributes to Liabilities table

--- a/index.html
+++ b/index.html
@@ -60,8 +60,17 @@
                 </table>
                 <table>
                     <caption>Liabilities</caption>
-                    <thead></thead>
-                    <tbody></tbody>
+                    <thead>
+                        <tr>
+                          <td>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                          </td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
                 </table>
                 <table></table>
              </div>
